@@ -692,6 +692,16 @@ sratim.password=
 # After first run, a file named 'sratim.jpg' will be created with the validation code image to enter here
 sratim.code=
 
+#Toggle visual hebrew html output for devices running a firmware with BiDi text support  
+sratim.BidiSupport=true
+
+#Display and sort the movie title in English as it retrieved from IMDB  
+sratim.KeepEnglishTitles=false
+
+#Display and sort the movie genres in English as it retrieved from IMDB  
+sratim.KeepEnglishGenres=false
+
+
 # value to match movie name to subtitles (in precent), 
 # above this value, the plugin will take this subtitles instead of taking the best match based on FPS and source
 sratim.textMatchSimilarity=0.8
